--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dlamloi.MAD.HomeActivity">
+    tools:context="com.dlamloi.MAD.activity.HomeActivity">
 
 
     <android.support.design.widget.AppBarLayout
@@ -20,8 +20,6 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-
 
     <include layout="@layout/content_home" />
 
