--- a/app/src/main/res/layout/content_create_group.xml
+++ b/app/src/main/res/layout/content_create_group.xml
@@ -7,23 +7,24 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:padding="20dp"
     android:background="@drawable/orange_gradient_background"
-    tools:context="com.dlamloi.MAD.CreateGroupActivity"
+    tools:context="com.dlamloi.MAD.activity.CreateGroupActivity"
     tools:showIn="@layout/activity_create_group">
 
     <ImageView
-        android:id="@+id/group_image_imageview"
+        android:id="@+id/select_image_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-
-        android:src="@drawable/username_drawable" />
+        android:gravity="center"
+        android:src="@drawable/group_profile"
+        />
 
 
 
     <LinearLayout
         android:id="@+id/group_name_layout"
-        android:layout_below="@+id/group_image_imageview"
+        android:layout_below="@+id/select_image_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
