Removed second listener on firebase database and added in icon

--- a/app/src/main/res/layout/activity_view_group.xml
+++ b/app/src/main/res/layout/activity_view_group.xml
@@ -19,7 +19,11 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemIconTint="#fc4c02"
+        app:itemTextColor="#fc4c02"
+        android:background="#FFFFFF"
         app:headerLayout="@layout/nav_header_view_group"
-        app:menu="@menu/activity_view_group_drawer" />
+        app:menu="@menu/activity_view_group_drawer"
+        />
 
 </android.support.v4.widget.DrawerLayout>
