--- a/app/src/main/res/layout/nav_header_view_group.xml
+++ b/app/src/main/res/layout/nav_header_view_group.xml
@@ -24,12 +24,14 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Android Studio"
+        android:textColor="#000000"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="android.studio@android.com" />
 
 </LinearLayout>
