--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="colorPrimary">#FFA500</color>
     <color name="colorPrimaryDark">#E59400</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#E0E0E0</color>
     <color name="TopBarColor">#29b8c4</color>
     <color name="ActionBarColor">#2dc9d6</color>
     <color name="LoginRegisterLayoutBackground">#16223B</color>
     <color name="LoginRegisterEditText_TextColorHint">#939393</color>
+    <color name="MainBackgroundColor">#EEEEEE</color>
+    <color name="Post_Update_Hint_Color">#E0E0E0</color>
 </resources>
