--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -9,20 +9,26 @@
     tools:context="com.dlamloi.MAD.activity.HomeActivity"
     tools:showIn="@layout/activity_home">
 
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+    <!-- android:indeterminateTint changes the colour of the progressbar -->
+    <ProgressBar
+        android:id="@+id/groups_loading_progressbar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/colorPrimaryDark"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/groups_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/groups_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
             />
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 
