Pushed firebase code to adapter from viewing groups screen, removed android support library of navigation view and used a third party library.

--- a/app/src/main/res/layout/content_view_groups.xml
+++ b/app/src/main/res/layout/content_view_groups.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:background="#EEEEEE"
-    tools:context="com.dlamloi.MAD.activity.HomeActivity"
-    tools:showIn="@layout/activity_home">
+    tools:context="com.dlamloi.MAD.activity.ViewGroupsActivity"
+    tools:showIn="@layout/activity_view_groups">
 
     <!-- android:indeterminateTint changes the colour of the progressbar -->
     <ProgressBar
@@ -20,13 +20,11 @@
         />
 
 
-
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/groups_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-            />
+        />
 
 
 
