--- a/app/src/main/res/layout/app_bar_view_group.xml
+++ b/app/src/main/res/layout/app_bar_view_group.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dlamloi.MAD.activity.ViewGroupActivity">
+    tools:context="com.dlamloi.MAD.activity.GroupHomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
