--- a/app/src/main/res/layout/app_bar_view_groups.xml
+++ b/app/src/main/res/layout/app_bar_view_groups.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dlamloi.MAD.activity.HomeActivity">
-
+    tools:context="com.dlamloi.MAD.activity.ViewGroupsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,19 +20,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_home" />
+    <include layout="@layout/content_view_groups" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/create_group_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:src="@drawable/create_icon"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        />
-
-
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/create_icon" />
 
 </android.support.design.widget.CoordinatorLayout>
