--- a/app/src/main/res/layout/fragment_update_list.xml
+++ b/app/src/main/res/layout/fragment_update_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.dlamloi.MAD.homeFragment1"
+    android:name="com.dlamloi.MAD.updateFragment1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.dlamloi.MAD.HomeFragment"
+    tools:context="com.dlamloi.MAD.fragment.UpdateFragment"
     tools:listitem="@layout/fragment_update" />
