Implemented create meeting activity with UI functionality, but no database code yet

--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -11,7 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/schedule_meeting_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
 
         />
 
