--- a/app/src/main/res/layout/content_create_meeting.xml
+++ b/app/src/main/res/layout/content_create_meeting.xml
@@ -11,8 +11,8 @@
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="40dp"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
         tools:context="com.dlamloi.MAD.activity.CreateMeetingActivity">
 
 
