--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -5,15 +5,13 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF">
 
-    <LinearLayout
-        android:layout_alignParentStart="true"
+    <View
         android:id="@+id/color_margin"
-        android:layout_width="5dp"
+        android:layout_width="10dp"
         android:layout_height="match_parent"
         android:layout_alignBottom="@id/meeting_author_linearlayout"
         android:background="#000000"
-        android:orientation="vertical"
-        />
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/meeting_title_textview"
@@ -34,7 +32,7 @@
         android:layout_alignParentEnd="true"
         android:padding="10dp"
         android:text="8th May 2018"
-        android:textColor="@color/material_red"
+        android:textColor="@color/bottom_sheet_dialog_textcolor"
         android:textSize="15sp" />
 
     <LinearLayout
@@ -84,19 +82,17 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/meeting_details_linearlayout"
         android:layout_below="@id/meeting_details_linearlayout"
-        android:paddingBottom="10dp"
-        android:paddingStart="11dp"
-        android:paddingEnd="11dp"
         android:orientation="horizontal"
-        >
+        android:paddingBottom="10dp"
+        android:paddingEnd="11dp"
+        android:paddingStart="11dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/by"
-            android:textSize="15dp"
             android:textColor="@color/bottom_sheet_dialog_textcolor"
-            />
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/meeting_author_textview"
@@ -108,8 +104,6 @@
             />
 
     </LinearLayout>
-
-    
 
 
 </RelativeLayout>
