--- a/app/src/main/res/layout/update_item.xml
+++ b/app/src/main/res/layout/update_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFFFFF"
     android:padding="10dp"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
     >
 
     <TextView
