--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -7,8 +7,8 @@
 
     <View
         android:id="@+id/color_margin"
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
+        android:layout_width="5dp"
+        android:layout_height="1000dp"
         android:layout_alignBottom="@id/meeting_author_linearlayout"
         android:background="#000000"
         android:orientation="vertical" />
