--- a/app/src/main/res/layout/content_view_group.xml
+++ b/app/src/main/res/layout/content_view_group.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dlamloi.MAD.activity.GroupHomeActivity"
+    tools:context="com.dlamloi.MAD.home.GroupHomeActivity"
     tools:showIn="@layout/app_bar_view_group"
     android:background="#FFFFFF"
     >
