--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/MainBackgroundColor"
-    tools:context="com.dlamloi.MAD.fragment.MeetingFragment"
+    tools:context="com.dlamloi.MAD.home.meetings.MeetingFragment"
     >
 
     <android.support.v7.widget.RecyclerView
