--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -2,16 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.dlamloi.MAD.home.update.UpdateFragment"
-    android:background="@color/MainBackgroundColor">
+    tools:context="com.dlamloi.MAD.home.tasks.TaskFragment"
+    android:background="@color/MainBackgroundColor"
+    >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/update_recyclerview"
+        android:id="@+id/task_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        />
+        android:layout_height="wrap_content" />
 
 
 
