--- a/app/src/main/res/layout/content_create_meeting.xml
+++ b/app/src/main/res/layout/content_create_meeting.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/md_white_1000"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dlamloi.MAD.activity.CreateMeetingActivity"
+    tools:context="com.dlamloi.MAD.meetingcreation.CreateMeetingActivity"
     tools:showIn="@layout/activity_create_meeting">
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="30dp"
-        tools:context="com.dlamloi.MAD.activity.CreateMeetingActivity">
+        tools:context="com.dlamloi.MAD.meetingcreation.CreateMeetingActivity">
 
 
         <TextView
