--- a/app/src/main/res/layout/activity_post_update.xml
+++ b/app/src/main/res/layout/activity_post_update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dlamloi.MAD.activity.PostUpdateActivity">
+    tools:context="com.dlamloi.MAD.updatecreation.PostUpdateActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
