--- a/app/src/main/res/layout/content_post_update.xml
+++ b/app/src/main/res/layout/content_post_update.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:float="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dlamloi.MAD.activity.PostUpdateActivity"
+    tools:context="com.dlamloi.MAD.updatecreation.PostUpdateActivity"
     android:background="@android:color/white"
     tools:showIn="@layout/activity_post_update"
     android:padding="10dp"
