--- a/app/src/main/res/layout/content_view_group.xml
+++ b/app/src/main/res/layout/content_view_group.xml
@@ -4,13 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.dlamloi.MAD.home.GroupHomeActivity"
-    tools:showIn="@layout/app_bar_view_group"
-    android:background="#FFFFFF"
-    >
-
-
+    tools:showIn="@layout/app_bar_view_group">
 
 
 
