Revamped login and register MVP

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -162,6 +162,7 @@
             android:layout_height="wrap_content"
             android:textColor="#FF0000"
             android:text="@string/invalid_username_password"
+            android:visibility="invisible"
             />
 
         <ProgressBar
