Revamped upload functionality and implemented download functionality

--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -4,9 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.dlamloi.MAD.home.files.FileFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/files_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+
+
+        />
 
 </FrameLayout>
